--- a/MPfm/MPfm.WindowsPhone/Classes/Controls/ListSyncDeviceControl.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Controls/ListSyncDeviceControl.xaml
@@ -25,8 +25,9 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <StackPanel Margin="0,0,0,17">
-            <TextBlock x:Name="textBlock" Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}"/>
-            <TextBlock x:Name="textBlock2" Text="{Binding Url}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSmallStyle}"/>
+            <TextBlock x:Name="textBlock" Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}" Margin="54,0,12,0"/>
+            <TextBlock x:Name="textBlock2" Text="{Binding Url}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSmallStyle}" Margin="54,0,12,0"/>
         </StackPanel>
+        <Image HorizontalAlignment="Left" Height="52" VerticalAlignment="Top" Width="52" Source="/Assets/Tiles/FlipCycleTileMedium.png"/>
     </Grid>
 </UserControl>
