--- a/MPfm/MPfm.WindowsPhone/Classes/Pages/MainPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Pages/MainPage.xaml
@@ -14,25 +14,27 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
+    shell:SystemTray.BackgroundColor="#20282e"
+    shell:SystemTray.ForegroundColor="#FFFFFF"
     shell:SystemTray.IsVisible="True">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardIn"/>
+                <toolkit:SlideTransition Mode="SlideRightFadeIn"/>
             </toolkit:NavigationInTransition.Backward>
             <toolkit:NavigationInTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardIn"/>
+                <toolkit:SlideTransition Mode="SlideLeftFadeIn"/>
             </toolkit:NavigationInTransition.Forward>
         </toolkit:NavigationInTransition>
     </toolkit:TransitionService.NavigationInTransition>
     <toolkit:TransitionService.NavigationOutTransition>
         <toolkit:NavigationOutTransition>
             <toolkit:NavigationOutTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardOut"/>
+                <toolkit:SlideTransition Mode="SlideRightFadeOut"/>
             </toolkit:NavigationOutTransition.Backward>
             <toolkit:NavigationOutTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardOut"/>
+                <toolkit:SlideTransition Mode="SlideLeftFadeOut"/>
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
@@ -64,8 +66,8 @@
          -->
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <phone:Pivot Height="736" Title="SESSIONS" Margin="0,0,10,0">
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="0,0,0,0">
+            <phone:Pivot Height="736" Title="SESSIONS" Margin="0,0,0,0">
                 <phone:PivotItem CacheMode="{x:Null}" Header="artists">
                     <phone:LongListSelector x:Name="listArtists" HorizontalAlignment="Left" Height="571" VerticalAlignment="Top" Width="424" SelectionChanged="listArtists_SelectionChanged">
                         <phone:LongListSelector.ItemTemplate>
