--- a/MPfm/MPfm.WindowsPhone/Classes/Pages/SyncWebBrowserPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Pages/SyncWebBrowserPage.xaml
@@ -1,5 +1,5 @@
 ﻿<local:BasePage
-    x:Class="MPfm.WindowsPhone.Classes.Pages.SyncPage"
+    x:Class="MPfm.WindowsPhone.Classes.Pages.SyncWebBrowserPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -17,7 +17,7 @@
     shell:SystemTray.BackgroundColor="#20282e"
     shell:SystemTray.ForegroundColor="#FFFFFF"
     shell:SystemTray.IsVisible="True">
-
+    
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
@@ -38,8 +38,8 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-
-    <!--LayoutRoot is the root grid where all page content is placed-->    
+    
+    <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -48,28 +48,26 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,18,0,12">
-            <TextBlock Text="SYNC LIBRARY WITH DEVICES" Style="{StaticResource PhoneTextNormalStyle}" FontFamily="Segoe WP Semibold" FontSize="22"/>
-            <TextBlock Text="nearby devices" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="72"/>
+            <TextBlock Text="SYNC LIBRARY WITH WEB BROWSER" Style="{StaticResource PhoneTextNormalStyle}" FontSize="22" FontFamily="Segoe WP Semibold"/>
+            <TextBlock Text="instructions" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="72"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="127*"/>
-                <RowDefinition Height="480*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="lblIPAddress" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="My IP address is" VerticalAlignment="Top" Width="436"/>
-            <TextBlock x:Name="lblStatus" HorizontalAlignment="Left" Margin="10,42,0,0" TextWrapping="Wrap" Text="Refreshing devices..." VerticalAlignment="Top" Width="436"/>
-            <ProgressBar x:Name="progressBar" HorizontalAlignment="Left" Height="16" Margin="0,74,0,0" VerticalAlignment="Top" Width="446"/>
-            <phone:LongListSelector x:Name="listDevices" HorizontalAlignment="Left" Height="494" Margin="10,113,0,0" VerticalAlignment="Top" Width="446" Grid.RowSpan="2" SelectionChanged="listDevices_SelectionChanged">
-                <phone:LongListSelector.ItemTemplate>
-                    <DataTemplate>
-                        <controls:ListSyncDeviceControl />
-                    </DataTemplate>
-                </phone:LongListSelector.ItemTemplate>
-            </phone:LongListSelector>
-
+            <StackPanel Grid.Row="0" Margin="12,18,0,0">
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Step 1" VerticalAlignment="Top" Width="436" FontFamily="Segoe WP Light" FontSize="36"/>
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Open a web browser and enter the following url in the address bar:" VerticalAlignment="Top" Width="436" Foreground="#FFD7D7D7"/>
+                <TextBlock HorizontalAlignment="Center" Margin="10,10,0,0" TextWrapping="Wrap" Text="http://192.168.1.255:53551" VerticalAlignment="Top" FontFamily="Segoe WP Semibold" FontSize="24"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Margin="12,18,0,0">
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Step 2" VerticalAlignment="Top" Width="436" FontFamily="Segoe WP Light" FontSize="36"/>
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Enter the following authentication code and click on the Login button:" VerticalAlignment="Top" Width="436" Foreground="#FFD7D7D7"/>
+                <TextBlock HorizontalAlignment="Center" Margin="10,10,0,0" TextWrapping="Wrap" Text="33582" VerticalAlignment="Top" FontFamily="Segoe WP Semibold" FontSize="24"/>
+            </StackPanel>
         </Grid>
     </Grid>
-
 </local:BasePage>
