--- a/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
+        xmlns:models="clr-namespace:MPfm.Library.Objects;assembly=MPfm.Library"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
         Title="Resume Playback" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
@@ -11,9 +12,38 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Background="#FF455865" Content="Resume Playback" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+        <Grid Grid.Row="0" Background="#FF455865">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" x:Name="lblTitle" Content="Resume Playback" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Button Grid.Column="1" Style="{StaticResource HeaderImageButton}" Click="btnResume_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <Image Source="/Resources/Images/Buttons/play.png" Stretch="None" />
+                    <TextBlock Margin="6,1,0,0">Resume</TextBlock>
+                </StackPanel>
+            </Button>
+        </Grid>        
         <Label Grid.Row="1" Content="Select a device from the list to resume playback:" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="6,8,4,8" />
         <ListView x:Name="listView" Grid.Row="2">
+            <ListView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type models:CloudDeviceInfo}" ItemsSource="{Binding SubItems}">
+                    <StackPanel Orientation="Vertical" Margin="4">
+                        <TextBlock Text="{Binding DeviceName}" FontSize="13" FontWeight="Bold" FontFamily="/Resources/Fonts/#Junction" Foreground="Black" Margin="0" />
+                        <TextBlock Text="On-the-fly Playlist" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
+                        <StackPanel Orientation="Horizontal">
+                            <StackPanel Background="DarkSlateGray" Width="54" Height="54" Margin="0,4,8,4"></StackPanel>
+                            <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                                <TextBlock Text="{Binding ArtistName}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
+                                <TextBlock Text="{Binding AlbumTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#555555" Margin="0" />
+                                <TextBlock Text="{Binding SongTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#777777" Margin="0" />
+                            </StackPanel>
+                        </StackPanel>
+                        <TextBlock Text="{Binding Timestamp}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#999999" Margin="0" />
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </ListView.Resources>            
         </ListView>
     </Grid>
 </base:BaseWindow>
